--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,8 +38,7 @@ body {
 }
 
 .row {
-  /*min-height: 50vh;*/
-  margin-bottom: 0px;
+  margin: 0px;
 }
 
 .hero-image {
@@ -150,6 +149,7 @@ body {
   border-radius: 10px;
   border: none;
   height: 100%;
+  padding: 0px;
   /*padding: 20px;*/
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
